--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "argparse": "^2.0.1",
     "array-flatten": "^1.1.1",
     "asynckit": "^0.4.0",
+    "axios": "^1.7.9",
     "balanced-match": "^1.0.2",
     "base64-js": "^1.5.1",
     "bcrypt": "^5.1.1",
